--- a/views/premium.ejs
+++ b/views/premium.ejs
@@ -46,7 +46,12 @@
                         <p class="text-center my-3">Předplatné Premium placené měsíčně.</p>
                         <p class="text-center my-3"><strong>+ 2 486</strong><br> prémiových kartiček</p>
                         <div class="px-3 d-flex justify-content-center">
-                            <a href="/auth/user/new" class="btn btn-danger my-3">Zaregistrovat se a aktivovat</a> 
+                            <% if (!currentUser) { %>
+                                <a href="/auth/user/new?premium=true" class="btn btn-danger my-3">Zaregistrovat se a aktivovat</a> 
+                            <% } %>
+                            <% if (currentUser && !currentUser.isPremium) { %>
+                                <a href="#" id="checkout-button-monthly" class="btn btn-danger my-3">Aktivovat</a> 
+                            <% } %>
                         </div>
                     </div>
                     <div class="card premium-plan-card m-4 mt-0">
@@ -59,7 +64,12 @@
                         <p class="text-center my-3">Předplatné Premium se slevou za roční platbu.</p>
                         <p class="text-center my-3"><strong>+ 2 486</strong><br> prémiových kartiček</p>
                         <div class="px-3 d-flex justify-content-center">
-                            <a href="/auth/user/new" class="btn btn-danger my-3">Zaregistrovat se a aktivovat</a> 
+                            <% if (!currentUser) { %>
+                                <a href="/auth/user/new?premium=true" class="btn btn-danger my-3">Zaregistrovat se a aktivovat</a> 
+                            <% } %>
+                            <% if (currentUser && !currentUser.isPremium) { %>
+                                <a href="#" id="checkout-button-yearly" class="btn btn-danger my-3">Aktivovat</a> 
+                            <% } %>
                         </div>
                     </div>
                 </div>
@@ -73,6 +83,7 @@
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.10.2/dist/umd/popper.min.js" integrity="sha384-7+zCNj/IqJ95wo16oMtfsKbZ9ccEh31eOz1HGyDuCQ6wgnyJNSYdrPa03rtR1zdB" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.min.js" integrity="sha384-QJHtvGhmr9XOIpI6YVutG+2QOK9T+ZnN4kzFN1RtK3zEFEIsxhlmWl5/YESvpZ13" crossorigin="anonymous"></script> 
     <script src="/js/jquery.min.js" ></script>
+    <script type="text/javascript" src="https://js.stripe.com/v3/"></script>
     <script type="text/javascript" src="/js/custom.js"></script>
 </body>
 </html>
