--- a/views/cards/edit.ejs
+++ b/views/cards/edit.ejs
@@ -1,5 +1,5 @@
 <% layout ('layouts/boilerplate.ejs')  %> 
-    <div class="col-sm-6 offset-sm-3">
+    <div class="col-lg-6 offset-lg-3">
         <h1>Upravit kartu</h1> 
 
         <form class="row g-3 needs-validation mt-3" novalidate action="/cards/edit/<%=card._id%>?_method=PUT" method="POST">
