--- a/views/sections/listAllCards.ejs
+++ b/views/sections/listAllCards.ejs
@@ -1,6 +1,12 @@
 <% layout ('layouts/boilerplate.ejs')  %> 
 <div class="container">
     <div class="row">
+        <div class="col-12 d-flex justify-content-around">
+            <a href="/category/<%= section.category %>" class="btn btn-sm btn-primary">Zpět na kategorii</a>
+            <a href="/category/<%= section.category %>/section/<%= section._id %>/newCard" class="btn btn-sm btn-primary">Přidat kartu</a>
+        </div>
+    </div>
+    <div class="row">
         <div class="col-11 offset-1 mb-3">
             <h5>Sekce: <%= section.name %> </h5>
         </div>
