--- a/views/cards/show.ejs
+++ b/views/cards/show.ejs
@@ -82,7 +82,7 @@
                 <h6><%= sectionName %> </h6>
                 <p class="text-muted text-smaller">Karta <%= nextNum - 1 %> z <%= sectionLength %></p>
                 <div class="progress mb-2">
-                  <% if(progressStatus === 0){ %> 
+                  <% if(progressStatus && progressStatus === 0){ %> 
                     <div class="progress-bar bg-danger" role="progressbar"></div>
                   <% } else { %> 
                     <div class="progress-bar bg-danger" role="progressbar" style="width:<%= progressStatus %>%" ><%= progressStatus %>%</div>
@@ -102,5 +102,6 @@
     <script src="/js/jquery.flip.min.js" ></script>
     <script src="/js/flip.custom.js" ></script>
     <script src="/js/custom.js"></script>
+    <script src="/js/card.js"></script>
   </body>
 </html>
