--- a/views/premium.ejs
+++ b/views/premium.ejs
@@ -84,7 +84,7 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.min.js" integrity="sha384-QJHtvGhmr9XOIpI6YVutG+2QOK9T+ZnN4kzFN1RtK3zEFEIsxhlmWl5/YESvpZ13" crossorigin="anonymous"></script> 
     <script src="/js/jquery.min.js" ></script>
     <script type="text/javascript" src="https://js.stripe.com/v3/"></script>
-    <script type="text/javascript" src="/js/custom.js"></script>
+    <script type="text/javascript" src="/js/payments.js"></script>
 </body>
 </html>
 
