--- a/views/category.ejs
+++ b/views/category.ejs
@@ -51,13 +51,25 @@
                 <% } else { category.basicSections.forEach(section => { %>
                     <% if(section.isPublic){ %> 
                     <div class="row py-2">
-                        <div class="col-7">                    
+                        <div class="col-7 d-flex align-items-center">                    
                                 <% if(currentUser && currentUser.sections.includes(section._id)) { %>
-                                    <p class="m-0 text-muted"><i class="fas fa-check-circle me-2" style="color:#AF0171"></i><%= section.name %></p>
+                                    <i class="fas fa-check-circle me-2" style="color:#AF0171"></i>
+                                    <div>
+                                        <p class="m-0 text-muted"><%= section.name %></p>
+                                        <p class="text-muted text-small mb-0"><%= section.shortDescription %> </p>
+                                    </div>
                                 <% } else if (section.isPremium) { %>
-                                    <p class="m-0"><i class="fas fa-star me-2"></i><%= section.name %></p>
+                                    <i class="fas fa-star me-2"></i>
+                                    <div>
+                                        <p class="m-0"><%= section.name %></p>
+                                        <p class="text-muted text-small mb-0"><%= section.shortDescription %> </p>
+                                    </div>
                                 <% } else { %> 
-                                    <p class="m-0"><i class="fas fa-layer-group me-2"></i><%= section.name %></p>
+                                    <i class="fas fa-layer-group me-2"></i>
+                                    <div>
+                                        <p class="m-0"><%= section.name %></p>
+                                        <p class="text-muted text-small mb-0"><%= section.shortDescription %> </p>
+                                    </div>
                                 <% } %>
                         </div>
                         <div class="col-3">
@@ -80,6 +92,7 @@
                             <% if (currentUser && currentUser.admin) { %>
                                 <a href="/category/<%= category.name %>/sectionUp/<%= section._id %>"><i class="fas fa-arrow-up"></i></a>
                                 <a href="/category/<%= category.name %>/sectionDown/<%= section._id %>"><i class="fas fa-arrow-down"></i></a>
+                                <a href="/category/<%= category.name %>/editSection/<%= section._id %>"><i class="far fa-edit"></i></a>
                                 <a href="/category/<%= category.name %>/section/<%= section._id %>/newCard" class="add-icon"><i class="fas fa-plus-square"></i></a>
                                 <a href="#" class="remove-icon" data-bs-toggle="modal" data-bs-target="#deleteSectionModal<%=section._id%>"><i class="fas fa-times px-1"></i></a>
                                 <a href="/category/<%= category.name %>/section/<%= section._id %>/listAllCards"><i class="fas fa-list-ul"></i></a>
@@ -104,14 +117,26 @@
                     <% } %>
                     <% if(!section.isPublic && currentUser && currentUser.admin){ %> 
                         <div class="row py-2">
-                            <div class="col-5">                    
-                                    <% if(currentUser && currentUser.sections.includes(section._id)) { %>
-                                        <p class="m-0 text-muted"><i class="fas fa-check-circle me-2" style="color:green"></i><%= section.name %></p>
-                                    <% } else if (section.isPremium) { %>
-                                        <p class="m-0"><i class="fas fa-star me-2"></i><%= section.name %></p>
-                                    <% } else { %> 
-                                        <p class="m-0"><i class="fas fa-layer-group me-2"></i><%= section.name %></p>
-                                    <% } %>
+                            <div class="col-5 d-flex align-items-center">                    
+                                <% if(currentUser && currentUser.sections.includes(section._id)) { %>
+                                    <i class="fas fa-check-circle me-2" style="color:#AF0171"></i>
+                                    <div>
+                                        <p class="m-0 text-muted"><%= section.name %></p>
+                                        <p class="text-muted text-small mb-0"><%= section.shortDescription %> </p>
+                                    </div>
+                                <% } else if (section.isPremium) { %>
+                                    <i class="fas fa-star me-2"></i>
+                                    <div>
+                                        <p class="m-0"><%= section.name %></p>
+                                        <p class="text-muted text-small mb-0"><%= section.shortDescription %> </p>
+                                    </div>
+                                <% } else { %> 
+                                    <i class="fas fa-layer-group me-2"></i>
+                                    <div>
+                                        <p class="m-0"><%= section.name %></p>
+                                        <p class="text-muted text-small mb-0"><%= section.shortDescription %> </p>
+                                    </div>
+                                <% } %>
                             </div>
                             <div class="col-2">
                                 <a href="/category/<%= category.name %>/section/<%= section._id %>/publish"" class="btn btn-sm btn-info">Zveřejnit</a>
@@ -130,6 +155,7 @@
                                 <% if (currentUser && currentUser.admin) { %>
                                     <a href="/category/<%= category.name %>/sectionUp/<%= section._id %>"><i class="fas fa-arrow-up"></i></a>
                                     <a href="/category/<%= category.name %>/sectionDown/<%= section._id %>"><i class="fas fa-arrow-down"></i></a>
+                                    <a href="/category/<%= category.name %>/editSection/<%= section._id %>"><i class="far fa-edit"></i></a>
                                     <a href="/category/<%= category.name %>/section/<%= section._id %>/newCard" class="add-icon"><i class="fas fa-plus-square"></i></a>
                                     <a href="#" class="remove-icon" data-bs-toggle="modal" data-bs-target="#deleteSectionModal<%=section._id%>"><i class="fas fa-times px-1"></i></a>
                                     <a href="/category/<%= category.name %>/section/<%= section._id %>/listAllCards"><i class="fas fa-list-ul"></i></a>
@@ -169,14 +195,26 @@
                 <% } else { category.premiumSections.forEach(section => { %>
                     <% if(section.isPublic){ %> 
                     <div class="row py-2">
-                        <div class="col-7">                    
-                                <% if(currentUser && currentUser.sections.includes(section._id)) { %>
-                                    <p class="m-0 text-muted"><i class="fas fa-check-circle me-2" style="color:#AF0171"></i><%= section.name %></p>
-                                <% } else if (section.isPremium) { %>
-                                    <p class="m-0"><i class="fas fa-star me-2"></i><%= section.name %></p>
-                                <% } else { %> 
-                                    <p class="m-0"><i class="fas fa-layer-group me-2"></i><%= section.name %></p>
-                                <% } %>
+                        <div class="col-7 d-flex align-items-center">                    
+                            <% if(currentUser && currentUser.sections.includes(section._id)) { %>
+                                <i class="fas fa-check-circle me-2" style="color:#AF0171"></i>
+                                <div>
+                                    <p class="m-0 text-muted"><%= section.name %></p>
+                                    <p class="text-muted text-small mb-0"><%= section.shortDescription %> </p>
+                                </div>
+                            <% } else if (section.isPremium) { %>
+                                <i class="fas fa-star me-2"></i>
+                                <div>
+                                    <p class="m-0"><%= section.name %></p>
+                                    <p class="text-muted text-small mb-0"><%= section.shortDescription %> </p>
+                                </div>
+                            <% } else { %> 
+                                <i class="fas fa-layer-group me-2"></i>
+                                <div>
+                                    <p class="m-0"><%= section.name %></p>
+                                    <p class="text-muted text-small mb-0"><%= section.shortDescription %> </p>
+                                </div>
+                            <% } %>
                         </div>
                         <div class="col-3">
                             <% if (!currentUser){ %> 
@@ -198,6 +236,7 @@
                             <% if (currentUser && currentUser.admin) { %>
                                 <a href="/category/<%= category.name %>/sectionUp/<%= section._id %>"><i class="fas fa-arrow-up"></i></a>
                                 <a href="/category/<%= category.name %>/sectionDown/<%= section._id %>"><i class="fas fa-arrow-down"></i></a>
+                                <a href="/category/<%= category.name %>/editSection/<%= section._id %>"><i class="far fa-edit"></i></a>
                                 <a href="/category/<%= category.name %>/section/<%= section._id %>/newCard" class="add-icon"><i class="fas fa-plus-square"></i></a>
                                 <a href="#" class="remove-icon" data-bs-toggle="modal" data-bs-target="#deleteSectionModal<%=section._id%>"><i class="fas fa-times px-1"></i></a>
                                 <a href="/category/<%= category.name %>/section/<%= section._id %>/listAllCards"><i class="fas fa-list-ul"></i></a>
@@ -222,15 +261,27 @@
                     <% } %>
                     <% if(!section.isPublic && currentUser && currentUser.admin){ %> 
                         <div class="row py-2">
-                            <div class="col-5">                    
-                                    <% if(currentUser && currentUser.sections.includes(section._id)) { %>
-                                        <p class="m-0 text-muted"><i class="fas fa-check-circle me-2" style="color:green"></i><%= section.name %></p>
-                                    <% } else if (section.isPremium) { %>
-                                        <p class="m-0"><i class="fas fa-star me-2"></i><%= section.name %></p>
-                                    <% } else { %> 
-                                        <p class="m-0"><i class="fas fa-layer-group me-2"></i><%= section.name %></p>
-                                    <% } %>
-                            </div>
+                            <div class="col-5 d-flex align-items-center">                    
+                                <% if(currentUser && currentUser.sections.includes(section._id)) { %>
+                                    <i class="fas fa-check-circle me-2" style="color:#AF0171"></i>
+                                    <div>
+                                        <p class="m-0 text-muted"><%= section.name %></p>
+                                        <p class="text-muted text-small mb-0"><%= section.shortDescription %> </p>
+                                    </div>
+                                <% } else if (section.isPremium) { %>
+                                    <i class="fas fa-star me-2"></i>
+                                    <div>
+                                        <p class="m-0"><%= section.name %></p>
+                                        <p class="text-muted text-small mb-0"><%= section.shortDescription %> </p>
+                                    </div>
+                                <% } else { %> 
+                                    <i class="fas fa-layer-group me-2"></i>
+                                    <div>
+                                        <p class="m-0"><%= section.name %></p>
+                                        <p class="text-muted text-small mb-0"><%= section.shortDescription %> </p>
+                                    </div>
+                                <% } %>
+                        </div>
                             <div class="col-2">
                                 <a href="/category/<%= category.name %>/section/<%= section._id %>/publish"" class="btn btn-sm btn-info">Zveřejnit</a>
                             </div>
@@ -248,6 +299,7 @@
                                 <% if (currentUser && currentUser.admin) { %>
                                     <a href="/category/<%= category.name %>/sectionUp/<%= section._id %>"><i class="fas fa-arrow-up"></i></a>
                                     <a href="/category/<%= category.name %>/sectionDown/<%= section._id %>"><i class="fas fa-arrow-down"></i></a>
+                                    <a href="/category/<%= category.name %>/editSection/<%= section._id %>"><i class="far fa-edit"></i></a>
                                     <a href="/category/<%= category.name %>/section/<%= section._id %>/newCard" class="add-icon"><i class="fas fa-plus-square"></i></a>
                                     <a href="#" class="remove-icon" data-bs-toggle="modal" data-bs-target="#deleteSectionModal<%=section._id%>"><i class="fas fa-times px-1"></i></a>
                                     <a href="/category/<%= category.name %>/section/<%= section._id %>/listAllCards"><i class="fas fa-list-ul"></i></a>
@@ -285,18 +337,26 @@
                 <form action="/category/<%= category.name  %>/newSection" method="POST">
                     <div class="form-group row">
                         <label for="name" class="col-2 col-form-label">Přidat sekci</label>
-                        <div class="col-4">
+                        <div class="col-6">
                             <input type="text" class="form-control" id="name" name="name" placeholder="Název sekce" required>
                         </div>
-                        <div class="col-2">
+                        <div class="col-4">
                             <input type="text" class="form-control-plaintext" id="category" name="category" value="<%= category.name %>" readonly>
                         </div>
-                        <div class="col-2">
+                    </div>
+                    <div class="row mt-2">
+                        <label for="desc" class="col-2 col-form-label">Popis</label>
+                        <div class="col-6">
+                            <input type="text" class="form-control" id="desc" name="desc" placeholder="Krátký popis">
+                        </div>
+                        <div class="col-4">
                             <select class="form-select" name="isPremium" id="isPremium">
                                 <option value="zdarma">Zdarma</option>
                                 <option value="premium">Premium</option>
                               </select>
                         </div>
+                    </div>
+                    <div class="row">
                         <div class="col-2">
                             <button class="btn btn-danger w-100">Přidat</button>
                         </div>
