--- a/views/premium.ejs
+++ b/views/premium.ejs
@@ -69,6 +69,7 @@
                             <% } %>
                             <% if (currentUser && !currentUser.isPremium) { %>
                                 <a href="#" id="checkout-button-yearly" class="btn btn-danger my-3">Aktivovat</a> 
+                                <a href="#" id="checkout-button-daily" class="btn btn-danger my-3">Aktivovat daily</a> 
                             <% } %>
                         </div>
                     </div>
