--- a/views/auth/register_form.ejs
+++ b/views/auth/register_form.ejs
@@ -42,7 +42,7 @@
                         <div class="form-check">
                             <input class="form-check-input" type="checkbox" value="gdpr" id="gdpr" required>
                             <label class="form-check-label" for="gdpr">
-                            Beru na vědomí <a href="/legal/gdpr">podmínky zpracování osobních údajů</a>
+                                Beru na vědomí <a href="/legal/gdpr" target="_blank">podmínky zpracování osobních údajů</a>
                             </label>
                         </div>
                     </div>
