--- a/public/css/landing.css
+++ b/public/css/landing.css
@@ -111,3 +111,43 @@
     background: white;
     text-decoration: none;
 }
+
+/* INFO CARDS */
+.landing-info-wrapper {
+    display: flex;
+    justify-content: space-evenly;
+    align-items: center;
+    flex-direction: row;
+}
+.landing-info {
+    padding: 1rem;
+}
+
+.landing-info p {
+    margin-bottom: 0;
+}
+
+.landing-info .info-main {
+    color: #E80F88;
+    font-weight: bolder;
+    font-size: 1.2rem;
+}
+
+.landing-info .info-secondary {
+    
+}
+
+.color-2 {
+    color: #4C0033;
+}
+
+@media only screen and (max-width: 780px) {
+    .landing-info-wrapper {
+        flex-direction: column;
+    }
+    .landing-info {
+        flex-basis: 0;
+        flex-grow: 1;
+        width: 100%;
+    }
+  }
