--- a/views/index.ejs
+++ b/views/index.ejs
@@ -31,8 +31,8 @@
         <section class="jumbotron main-header">
           <div class="container">
               <div class="row">
-                  <div class="col-sm-5 offset-sm-1 my-5 p-4">
-                    <h1 class="jumbotron-heading mb-3">Studuj právo efektivně!</h1>
+                  <div class="col-md-5 offset-md-1 my-5 p-4">
+                    <h1 class="jumbotron-heading mb-3">Studuj práva efektivně!</h1>
                     <p class="lead">Pusť se do studia práv se sadou stovek kartiček s otázkami a odpověďmi. Skvělá interaktivní příprava na zkoušky.</p>        
                     <div class="mt-5">
                         <% if(!currentUser){ %> 
@@ -45,9 +45,37 @@
         </section>
 
   
-        <div class="album pt-5 pb-3 my-5">
+        <div class="album pt-5 pb-3 mb-5">
           <div class="container">
-  
+            <div class="mb-5 landing-info-wrapper">
+                    <div class="landing-info d-flex flex-row justify-content-evenly align-items-center">
+                        <div class="p-3 info-icon">
+                            <i class="fas fa-scroll fa-3x text-muted"></i>
+                        </div>
+                        <div>
+                            <p class="info-main">1 235 kartiček zdarma</p>
+                            <p class="info-secondary text-muted">a přibývavají</p>
+                        </div>
+                    </div>
+                    <div class="landing-info d-flex flex-row justify-content-evenly align-items-center">
+                        <div class="p-3 info-icon">
+                            <i class="fas fa-mobile-alt fa-3x color-2 text-muted"></i>
+                        </div>
+                        <div>
+                            <p class="info-main">Responzivní design</p>
+                            <p class="info-secondary text-muted">procvičuj i na mobilu</p>
+                        </div>
+                    </div>
+                    <div class="landing-info d-flex flex-row justify-content-evenly align-items-center">
+                        <div class="p-3 info-icon">
+                            <i class="fas fa-gavel fa-3x color-2 text-muted"></i>
+                        </div>
+                        <div>
+                            <p class="info-main">6 právních oblastí </p>
+                            <p class="info-secondary text-muted">obsahujících 68 balíčků</p>
+                        </div>
+                    </div>
+            </div>
             <div class="row">
                 <div class="col-lg-2 col-md-4 col-6 mb-4">
                     <a href="/category/trestnipravo" class="landing-link">
@@ -143,7 +171,7 @@
             <div class="row">
                 <div class="col-md-8 offset-md-2 text-center my-5">
                     <h1 class="mb-4">Naše vize</h1>
-                    <p class="fs-5">Mladí právníci neustále skládají zkoušky. Ať už na právnické fakultě nebo po jejím dokončení v rámci dalšího profesního vzdělávání. Sami jsme touto cestou prošli. Rádi bychom jim nabídli nástroj, který jim na této náročné cestě usnadní život a přípravu na tyto zkoušky zefektní. Proto jsme vytvořili <strong style="color:#E80F88">InLege</strong>, aplikaci pro studium práva.</p>
+                    <p class="fs-5">Mladí právníci neustále skládají zkoušky. Ať už na právnické fakultě nebo po jejím dokončení v rámci dalšího profesního vzdělávání. Sami jsme touto cestou prošli. Rádi bychom jim nabídli nástroj, který jim na této náročné cestě usnadní život a přípravu na tyto zkoušky zefektivní. Proto jsme vytvořili <strong style="color:#E80F88">InLege</strong>, aplikaci pro studium práva.</p>
                 </div>
             </div>
         </div>
@@ -154,6 +182,7 @@
     <!-- JS for Bootstrap -->
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.10.2/dist/umd/popper.min.js" integrity="sha384-7+zCNj/IqJ95wo16oMtfsKbZ9ccEh31eOz1HGyDuCQ6wgnyJNSYdrPa03rtR1zdB" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.min.js" integrity="sha384-QJHtvGhmr9XOIpI6YVutG+2QOK9T+ZnN4kzFN1RtK3zEFEIsxhlmWl5/YESvpZ13" crossorigin="anonymous"></script> 
+    <script src="https://kit.fontawesome.com/c9f8e59b45.js" crossorigin="anonymous"></script>
     <script src="/js/jquery.min.js" ></script>
     <script type="text/javascript" src="/js/custom.js"></script>
 </body>
