--- a/views/premium.ejs
+++ b/views/premium.ejs
@@ -73,6 +73,9 @@
                         </div>
                     </div>
                 </div>
+                <div class="d-flex flex-column justify-content-center align-items-center">
+                    <p class=" text-center w-custom-80 p-3 pb-5">Předplatné je automaticky měsíčně nebo ročně (dle typu předplatného) strháváno z vašeho účtu. Zrušit jej můžete kdykoliv.</p>
+                </div>
             </div>
           </section>
         
