--- a/views/index.ejs
+++ b/views/index.ejs
@@ -47,14 +47,14 @@
   
         <div class="album pt-5 pb-3 mb-5">
           <div class="container">
-            <div class="mb-5 landing-info-wrapper">
+            <div class="mb-5 landing-info-wrapper d-none-780-up">
                     <div class="landing-info d-flex flex-row justify-content-evenly align-items-center">
                         <div class="p-3 info-icon">
                             <i class="fas fa-scroll fa-3x text-muted"></i>
                         </div>
                         <div>
                             <p class="info-main">1 235 kartiček zdarma</p>
-                            <p class="info-secondary text-muted">a přibývavají</p>
+                            <p class="info-secondary text-muted">a přibývají</p>
                         </div>
                     </div>
                     <div class="landing-info d-flex flex-row justify-content-evenly align-items-center">
@@ -62,8 +62,8 @@
                             <i class="fas fa-mobile-alt fa-3x color-2 text-muted"></i>
                         </div>
                         <div>
-                            <p class="info-main">Responzivní design</p>
-                            <p class="info-secondary text-muted">procvičuj i na mobilu</p>
+                            <p class="info-main">Procvičuj i na mobilu</p>
+                            <p class="info-secondary text-muted">díky responzivnímu designu</p>
                         </div>
                     </div>
                     <div class="landing-info d-flex flex-row justify-content-evenly align-items-center">
@@ -76,6 +76,45 @@
                         </div>
                     </div>
             </div>
+
+                <div class="mb-5 row d-none-780-down">
+                    <div class="col-12">
+                        
+                        <div class="landing-info col-md-3 offset-md-2">
+                            <div class="row my-2">
+                                <div class="info-icon col-3 d-flex justify-content-center align-items-center">
+                                    <i class="fas fa-scroll fa-3x text-muted"></i>
+                                </div>
+                                <div class="col-9">
+                                    <p class="info-main">1 235 kartiček zdarma</p>
+                                    <p class="info-secondary text-muted">a přibývají</p>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="landing-info col-md-3">
+                            <div class="row my-2">
+                                <div class="info-icon col-3 d-flex justify-content-center align-items-center">
+                                    <i class="fas fa-mobile-alt fa-3x color-2 text-muted"></i>
+                                </div>
+                                <div class="col-9">
+                                    <p class="info-main">Procvičuj i na mobilu</p>
+                                    <p class="info-secondary text-muted">díky responzivnímu designu</p>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="landing-info col-md-3">
+                            <div class="row my-2">
+                                <div class="info-icon col-3 d-flex justify-content-center align-items-center">
+                                    <i class="fas fa-gavel fa-3x color-2 text-muted"></i>
+                                </div>
+                                <div class="col-9">
+                                    <p class="info-main">6 právních oblastí </p>
+                                    <p class="info-secondary text-muted">obsahujících 68 balíčků</p>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
             <div class="row">
                 <div class="col-lg-2 col-md-4 col-6 mb-4">
                     <a href="/category/trestnipravo" class="landing-link">
