--- a/views/category.ejs
+++ b/views/category.ejs
@@ -11,7 +11,7 @@
                     <div class="col-lg-4 p-3 d-flex justify-content-around align-items-center">
                         <a class="btn btn-danger" href="/auth/user/new">Zaregistrovat se</a>
                         <% if(demoCat.basicSections.length > 0){ %> 
-                            <a class="btn btn-outline-danger" href="/category/demo/section/<%= demoCat.sections[0]%>/1">Vyzkoušet demo</a>
+                            <a class="btn btn-outline-danger" href="/category/demo/section/<%= demoCat.basicSections[0]%>/1">Vyzkoušet demo</a>
                         <% } %>
                     </div>
                 </div>
@@ -20,7 +20,7 @@
     </div>
 <% } %> 
 <div class="row mb-3">
-    <div class="col-md-3 offset-md-1 mb-3"> 
+    <div class="col-md-3 offset-md-1 mb-3">
         <div class="card shadow">
             <div class="card-body category-box d-flex flex-column align-items-center justify-content-center">
                 <div class="rounded-circle icon-background d-flex justify-content-center align-items-center">
