--- a/views/auth/register_form.ejs
+++ b/views/auth/register_form.ejs
@@ -41,7 +41,7 @@
                     <div class="mt-3">
                         <div class="form-check">
                             <input class="form-check-input" type="checkbox" value="gdpr" id="gdpr" required>
-                            <label class="form-check-label" for="gdpr">
+                            <label class="form-check-label text-small registration-gdpr" for="gdpr">
                                 Beru na vědomí <a href="/legal/gdpr" target="_blank">podmínky zpracování osobních údajů</a>
                             </label>
                         </div>
