--- a/views/cards/report.ejs
+++ b/views/cards/report.ejs
@@ -6,9 +6,9 @@
                 <div class="card-body">
                     <div class="text-center">
                         <h4 class="mb-3 mt-2">Nahlásit chybu na kartě</h4>
-                        <p class="">Objevil/a jsi na kartě faktickou chybu? Dej nám vědět a my se na to podíváme.</p>
+                        <p class="">Objevil/a jsi na kartě formální nebo faktickou chybu? Dej nám vědět a my se na to podíváme.</p>
                     </div>
-                    <div class="card p-3 text-muted">
+                    <div class="card p-3 text-small mt-4">
                         <div>
                             <p><strong>Strana A:</strong></p>
                             <p><%= card.pageA %></p>
