--- a/views/sections/finished.ejs
+++ b/views/sections/finished.ejs
@@ -3,19 +3,25 @@
     <div class="row">
         <div class="col-md-6 col-12 offset-md-3">
             <div class="card shadow text-center p-4">
-                <h3>Gratulujeme!<br /></h3>
-                <h6>Dokončil/a jsi balíček "<%= sectionName%>"</h6>
+                <h3 class="mt-3">Skvělé! <i class="far fa-smile-beam fa-1x"></i></h3>
+                <hr>
+                <p class="my-3">Dokončil/a jsi balíček <strong><%= sectionName%></strong></p>
                 <div class="my-3 d-flex justify-content-center">
-                    <div class="w-75">
-                        <div class="progress-bar bg-danger" role="progressbar" style="width:100%" >100%</div>
+                    <div class="w-50">
+                        <div class="progress-bar bg-danger finished-progress-bar" role="progressbar" style="width:100%" >100%</div>
                     </div>
                 </div>
                 
                 <% if(!demo){ %> 
-                    <a href="/category/<%= category%>">Zpět na kategorii</a>
+                    <a href="/category/<%= category%>" class="my-3">Zpět na kategorii</a>
                 <% } else { %> 
-                    <p>Stejně jako cvičný balíček můžeš zdarma procházet stovky kartiček ze všech oborů práva. Stačí se zdarma zaregistrovat.</p>
-                    <a href="/auth/user/new" class="btn btn-lg btn-danger mt-3">Zaregistrovat se zdarma</a>
+                    <hr>
+                    <h4 class="mt-3">A co dál?</h4>
+                    <p class="m-3">Stejně jako cvičný balíček můžeš procházet stovky kartiček z různých právních oborů. Stačí se zdarma zaregistrovat.</p>
+                    <p class="m-3">A kdyby ti to nestačilo, další stovky kartiček jsou k dispozici za necelou stokorunu měsíčně s účtem Premium.</p>
+                    <p>
+                        <a href="/auth/user/new" class="btn btn-lg btn-danger mt-3">Zaregistrovat se zdarma</a>
+                    </p>
                 <% } %>
             </div>
         </div>
