test daily payment

--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -1,5 +1,13 @@
 <footer class="footer bg-light py-3 mt-auto">
     <div class="container text-muted">
-        <span>&copy; InLege 2023</span>
+        <div class="d-flex flex-row justify-content-between text-small">
+            <div><span>&copy; InLege 2023</span></div>
+            <div class="d-flex flex-row justify-content-between">
+                <div class="mx-2"><a href="/" class="footer-link">Kontakt</a></div>
+                <div class="mx-2"><a href="/" class="footer-link">Obchodní podmínky</a></div>
+                <div class="mx-2"><a href="/" class="footer-link">Ochrana osobních ůdajů</a></div>
+            </div>
+        </div>
+        
     </div>
 </footer>
