test daily removed

--- a/views/premium.ejs
+++ b/views/premium.ejs
@@ -74,7 +74,7 @@
                     </div>
                 </div>
                 <div class="d-flex flex-column justify-content-center align-items-center">
-                    <p class=" text-center w-custom-80 p-3 pb-5">Předplatné je automaticky měsíčně nebo ročně (dle typu předplatného) strháváno z vašeho účtu. <b>Zrušit jej můžete kdykoliv.</b><a href="#" id="checkout-button-daily" class="btn btn-danger my-3">Aktivovat Daily</a> </p>
+                    <p class=" text-center w-custom-80 p-3 pb-5">Předplatné je automaticky měsíčně nebo ročně (dle typu předplatného) strháváno z vašeho účtu. <b>Zrušit jej můžete kdykoliv.</b></p>
                 </div>
             </div>
           </section>
