--- a/views/admin/users.ejs
+++ b/views/admin/users.ejs
@@ -9,6 +9,7 @@
         <div class="row">
             <div class="col-sm-2 offset-1"><%= user.email %> </div>
             <div class="col-sm-2"><%= user.updatedDateOfRegistration %> </div>
+            <div class="col-sm-1"><%= user.cardsSeen %></div>
             <% if(user.isPremium){ %> 
                 <div class="col-sm-1">Premium</div>
             <% } else { %>
